syntax = "proto3";

package api.panshee.v1.proto;


option java_package = "api.panshee.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "WalletProto";

option go_package = ".;pb";

//TODO:

message GetWalletDTODataRequest {
    // id of the user to who wants to refresh token
    string parent = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetWalletDTODataResponse {
    repeated WalletDTO wallets = 1;
}

message WalletDTO {
    string address = 1;
    repeated CurrencyDTO tokens = 2;
}

message CurrencyDTO {
    string tokenName = 1;
    string tokenSymbol = 2;
    float amount = 3;
    float priceUSD = 4;
    float priceChangePercentage24h = 5;
}